--- a/_posts/2013-05-22-0.md
+++ b/_posts/2013-05-22-0.md
@@ -9,6 +9,4 @@ badge_icon: exclamation
 * [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16808){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/7253585a-c22d-4af8-a4c9-58111a6a7021/Econ_Econ_Policy_Group_Mtg_05_22_2013_PM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/YhOK9JlFlrQ?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="YhOK9JlFlrQ" %}
