--- a/_posts/2013-07-23-0.md
+++ b/_posts/2013-07-23-0.md
@@ -10,6 +10,4 @@ Discussion with business leaders on the transportation infrastructure that is ne
 * [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16806){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/81704493-df20-4417-b0c8-47fc1db2a94b/Policy__Leadeship_Grp_WS_07_23_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/Wac4nUUqibY?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="Wac4nUUqibY" %}
