--- a/_posts/2013-08-06-0.md
+++ b/_posts/2013-08-06-0.md
@@ -9,6 +9,4 @@ County Center
 
 * [Watch video](http://65.49.32.144/Hillsborough/77e71539-08b8-4532-89a2-cdae2391b278/Transportation_for_Economic_Dev_PF_08_06_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/Br8Fy4WoV5s?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="Br8Fy4WoV5s" %}
