--- a/_posts/2013-08-14-0.md
+++ b/_posts/2013-08-14-0.md
@@ -5,10 +5,8 @@ badge_icon: cogs
 subtitle: TED PLG Workshop
 ---
 
-* Discussion on cost-effective transportation investments to support job growth and public engagement philosophy. 
+* Discussion on cost-effective transportation investments to support job growth and public engagement philosophy.
 * [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16807){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/31b31d5b-6295-46e2-b46c-0bc1946edb54/Trans_Econ_Dev_WS_08_14_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/I2oUeDCY_00?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="I2oUeDCY_00" %}
