--- a/_posts/2013-10-09-0.md
+++ b/_posts/2013-10-09-0.md
@@ -13,6 +13,4 @@ Discussion on the Florida Department of Transportation perspective on regional t
 * [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9554){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/acd4ac46-c3ad-4f02-be24-e3375af9914e/Trans_Econ_Dev_WS_10_09_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/7fWkE7X_b6k?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="7fWkE7X_b6k" %}
