--- a/_posts/2013-11-13-0.md
+++ b/_posts/2013-11-13-0.md
@@ -12,6 +12,4 @@ subtitle: TED PLG Workshop
 * [Presentation – Transit Development Plan by Phil Hale, HART CEO](http://www.hillsboroughcounty.org/DocumentCenter/View/10037){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/0d3b91e7-6801-497b-8fa7-5d4d3e289f7a/Trans_Econ_Dev_WS_11_13_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/yj5JY0Si3eM?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="yj5JY0Si3eM" %}
