--- a/_posts/2013-12-11-0.md
+++ b/_posts/2013-12-11-0.md
@@ -5,13 +5,11 @@ badge_icon: cogs
 subtitle: TED PLG Workshop
 ---
 
-* Discussion on transportation performance measures, economic competitive sites, and long range transportation plan. 
+* Discussion on transportation performance measures, economic competitive sites, and long range transportation plan.
 * [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/10299){:target='_blank'}
 * [Presentation – Transportation Performance Measures by Steve Polizin, Center for Urban Transportation Research](http://www.hillsboroughcounty.org/DocumentCenter/View/10565){:target='_blank'}
 * [Presentation – Competitive Sites and Transportation by Ron Barton, Hillsborough County Economic Development](http://www.hillsboroughcounty.org/DocumentCenter/View/10564){:target='_blank'}
 * [Presentation – Long Range Transportation Plan Update by Melissa Zornita, Hillsborough County Planning Commission](http://www.hillsboroughcounty.org/DocumentCenter/View/10563){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/8cf2f77f-41b3-47e0-a65a-ac5ea485a471/Trans_Econ_Dev_WS_12_11_2013/presentation_file/mgpresenter.html){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/IrAUwbFw3V8?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="IrAUwbFw3V8" %}
