--- a/_posts/2014-10-21-0.md
+++ b/_posts/2014-10-21-0.md
@@ -10,6 +10,4 @@ subtitle: TED PLG Workshop
 * [Stakeholder/Community presentation series listing](http://www.hillsboroughcounty.org/DocumentCenter/View/16767){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/da6376ce-61e4-43b0-81f5-f91f73424e9d/Trans_Econ_Dev_WS_10_21_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/E73sDG-C8dY?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="E73sDG-C8dY" %}
