--- a/_posts/2015-02-18-0.md
+++ b/_posts/2015-02-18-0.md
@@ -8,6 +8,4 @@ layout: post
 * [Agenda Item](http://agenda.hillsboroughcounty.org/cache/00003/564/F-3.PDF){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/2d9a10d8-57da-444b-997f-6d0be27d8df3/BOCC_Regular_Meeting_2_18_2015_AM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/KI_W65GJwRA?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="KI_W65GJwRA" %}
