--- a/_posts/2015-06-11-0.md
+++ b/_posts/2015-06-11-0.md
@@ -11,6 +11,4 @@ subtitle: TED PLG Workshop
 * [Community Transportation Plan](http://go.hillsboroughcdms.org/documents/helpful-info/GO-Hillsborough_Community-Transportation-Plan_06-2015.pdf){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/820ebde3-9117-4126-9ee3-8a2b68258fd6/Trans_Econ_Dev_06_11_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/QJiRTjMd6zc?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="QJiRTjMd6zc" %}
