--- a/_posts/2015-07-16-0.md
+++ b/_posts/2015-07-16-0.md
@@ -11,6 +11,4 @@ Discussion on Community Transportation Plan and continued Phase 2 community enga
 * [Presentation – Our Challenge, Our Choice by Bob Clifford, Parsons Brinkerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/16801){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/217af75f-e379-4d64-8131-0c2ca8c602ff/TED%20Policy%20Group%2007%2016%202015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/yn2SsR1Eec0?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="yn2SsR1Eec0" %}
