--- a/_posts/2016-02-04-0.md
+++ b/_posts/2016-02-04-0.md
@@ -9,3 +9,5 @@ The Board of County Commissioners discussed mobility fees on new development as 
 * [Agenda and presentations](http://agenda.hillsboroughcounty.org/cache/00003/662/02-04%20Mobility%20Fee%20Agenda.pdf)
 
 * [Watch video](http://65.49.32.144/Hillsborough/4cd81d7b-451a-4d01-a6f2-65756c2c5043/BOCC_Workshop_2_4_2016/presentation_file/mgpresenter.html?Stream=low)
+
+{% include embed-youtube.html src="TSpbbMycyYY" %}
