--- a/_posts/2016-04-13-0.md
+++ b/_posts/2016-04-13-0.md
@@ -13,3 +13,5 @@ The Board of County Commissioners approved setting a [public hearing on April 27
 * [Agenda, background information, and presentations](http://agenda.hillsboroughcounty.org/cache/00003/685/April%2013%20Agenda.pdf)
 
 * [Watch video](http://65.49.32.144/Hillsborough/a17dcaab-f27c-4ca6-b28b-f1378b3307b4/BOCC_Workshop_4_13_2016/presentation_file/mgpresenter.html?Stream=low)
+
+{% include embed-youtube.html src="498nLoWYbXM" %}
