--- a/_posts/2013-09-16-0.md
+++ b/_posts/2013-09-16-0.md
@@ -7,7 +7,4 @@ subtitle: TED Community Conversation Meeting
 
 King High School
 
-
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/36hDHKFrzVc?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="36hDHKFrzVc" %}
