--- a/_posts/2013-11-04-0.md
+++ b/_posts/2013-11-04-0.md
@@ -7,7 +7,4 @@ subtitle: TED Community Conversation Meeting
 
 Strawberry Crest High School
 
-
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/xn8-cf_O9g0?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="xn8-cf_O9g0" %}
