--- a/_posts/2013-12-02-0.md
+++ b/_posts/2013-12-02-0.md
@@ -7,7 +7,4 @@ subtitle: TED Community Conversation Meeting
 
 Riverview Civic Center
 
-
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/7KH17jekX94?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="7KH17jekX94" %}
