--- a/_posts/2014-08-12-0.md
+++ b/_posts/2014-08-12-0.md
@@ -5,11 +5,9 @@ badge_icon: cogs
 subtitle: TED PLG Workshop
 ---
 
-* Discussion on the Comprehensive Mobility Proposal. PLG recommends staff engage someone in the private sector with transportation experience to assist with the public discussion process, specifically someone with successful experience in transportation referendums. 
+* Discussion on the Comprehensive Mobility Proposal. PLG recommends staff engage someone in the private sector with transportation experience to assist with the public discussion process, specifically someone with successful experience in transportation referendums.
 * [Proposal Presentation](http://www.hillsboroughcounty.org/DocumentCenter/View/12876){:target='_blank'}
 * [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/12755){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/c58b73db-f1d1-4cab-9f3c-2389ba25afc4/Trans_Econ_Dev_WS_8_12_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/5bkxk14T9Cg?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="5bkxk14T9Cg" %}
