--- a/_posts/2015-01-14-0.md
+++ b/_posts/2015-01-14-0.md
@@ -10,6 +10,4 @@ subtitle: TED PLG Workshop
 * [Presentation – by George Walton, Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/14330){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/3057a3f2-a609-4545-8e27-afe290fdbaff/Trans_Econ_Dev_WS_1_14_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/kdvglsSzIsA?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="kdvglsSzIsA" %}
