--- a/_posts/2015-02-12-0.md
+++ b/_posts/2015-02-12-0.md
@@ -13,6 +13,4 @@ Discussion on public participation process and meeting schedule. Parson Brincker
 
 <img src="{{ site.baseurl }}/images/gohills-logo.jpg" class="img-responsive center-block">
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/bJVaJl66o8I?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="bJVaJl66o8I" %}
