--- a/_posts/2015-04-22-0.md
+++ b/_posts/2015-04-22-0.md
@@ -11,6 +11,4 @@ Discussion on public engagement process and GO Hillsborough Issues and Opportuni
 * [Report](http://go.hillsboroughcdms.org/documents/helpful-info/GoHills_-IO-Report_4-10.pdf){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/53ceb82e-551d-4123-9734-6e36aeef8bc8/Trans_Econ_Dev_PG_4_22_2015A/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
-<div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/SIsF4kTpxIQ?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+{% include embed-youtube.html src="SIsF4kTpxIQ" %}
