--- a/_posts/2016-03-09-0.md
+++ b/_posts/2016-03-09-0.md
@@ -9,3 +9,5 @@ The Board of County Commissioners continued the discussion from February 4 regar
 * [Agenda, background information, and presentations](http://agenda.hillsboroughcounty.org/cache/00003/675/Agenda%20-%20Backup%20for%20the%20March%209th%20Workshop.pdf)
 
 * [Watch video](http://65.49.32.144/Hillsborough/b802c117-e6fd-43f1-8b66-8dd63d023b46/Comm%20Transportation%20WS%203%209%202016/presentation_file/mgpresenter.html?Stream=low)
+
+{% include embed-youtube.html src="lijL6kkrHds" %}
