--- a/_posts/2016-03-24-0.md
+++ b/_posts/2016-03-24-0.md
@@ -11,3 +11,5 @@ County staff presented a proposed phased implementation consisting of increased 
 * [Agenda and background information](http://agenda.hillsboroughcounty.org/cache/00003/677/16-0324_Mobility%20Fee%20WS%20Agenda.pdf)
 
 * [Watch video](http://65.49.32.144/Hillsborough/e7c98fb2-edd4-41e3-948d-932adb1446b2/BOCC_Workshop_3_24_2016/presentation_file/mgpresenter.html?Stream=low)
+
+{% include embed-youtube.html src="rnptPPzfAYo" %}
