nov 5 community transportation plan

--- a/_posts/2015-11-05-0.md
+++ b/_posts/2015-11-05-0.md
@@ -6,3 +6,4 @@ badge_color: info
 
 * The Policy Leadership Group recommended that a half-percent sales tax referendum to fund county-wide transportation improvements be considered by the Board of County Commissioners.
 * [Watch video](http://65.49.32.144/Hillsborough/4bc65413-4175-49a7-8fb6-6e103cf2d7c9/TED_Policy_Group_11_5_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
+* [Community Transportation Plan Nov. 2015](http://hillsboroughcounty.org/DocumentCenter/View/18610)
