--- a/_posts/2016-04-26-0.md
+++ b/_posts/2016-04-26-0.md
@@ -4,4 +4,6 @@ badge_icon: calendar
 badge_color: default
 ---
 
-[Public hearings scheduled](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14829) for a Mobility Fee Ordinance, changes to the Impact Fee Ordinance, amendments to the Comprehensive Plan, and changes to the Land Development Code. Hearing will be held at 6 p.m. at East Bay High School, 7710 Old Big Bend Road in Gibsonton.
+The Board of County Commissioners approved a [Mobility Fee Ordinance](http://www.hillsboroughcounty.org/index.aspx?NID=1593), changes to the Impact Fee Ordinance, and amendments to the Comprehensive Plan. They also held a first public hearing for changes to the Land Development Code. A [second public hearing](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14834) for changes to the Land Development Code is scheduled for May 19.
+
+* [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/693/16-0426_Public%20Hearing%20Agenda.pdf)
