--- a/_posts/2016-04-27-0.md
+++ b/_posts/2016-04-27-0.md
@@ -4,4 +4,6 @@ badge_icon: calendar
 badge_color: default
 ---
 
-[Public hearing scheduled](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14830) for a ½% Transportation System Sales Surtax Ordinance. Hearing will be held at 6 p.m. at All People's Life Center, 6105 E. Sligh Avenue in Tampa.
+The Board of County Commissioners did not approve ½% Transportation System Sales Surtax Ordinance. The next [Community Transportation Plan workshop](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14783) is scheduled for May 11.
+
+* [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/692/16-0427_Agenda%20and%20Backup.pdf)
