--- a/_posts/2016-04-20-0.md
+++ b/_posts/2016-04-20-0.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-badge_icon: calendar
+badge_icon: gear
 badge_color: default
 ---
 
@@ -9,3 +9,4 @@ The Board of County Commissioners approved proposed planned projects as part of 
 * [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/686/04-20%20FINAL%20Agenda.pdf)
 * [Proposed Planned Projects](http://hillsboroughcounty.org/DocumentCenter/View/18548)
 * [Presentation](http://hillsboroughcounty.org/DocumentCenter/View/18576)
+* [Watch video](http://65.49.32.144/Hillsborough/6b4de0b0-2508-470d-b988-c60cc3496ccf/BOCC_Regular_Mtg_4_20_2016/presentation_file/mgpresenter.html?Stream=low)
