--- a/_posts/2016-04-27-0.md
+++ b/_posts/2016-04-27-0.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-badge_icon: calendar
+badge_icon: gear
 badge_color: default
 ---
 
 The Board of County Commissioners did not approve the ½% Transportation System Sales Surtax Ordinance. The next [Community Transportation Plan workshop](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14783) is scheduled for May 11.
 
 * [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/692/16-0427_Agenda%20and%20Backup.pdf)
+
+{% include embed-youtube.html src="SmBHJ15LfSU" %}
