--- a/_posts/2016-04-26-0.md
+++ b/_posts/2016-04-26-0.md
@@ -4,7 +4,7 @@ badge_icon: gear
 badge_color: default
 ---
 
-The Board of County Commissioners approved a [Mobility Fee Ordinance](http://www.hillsboroughcounty.org/index.aspx?NID=1593), changes to the Impact Fee Ordinance, and amendments to the Comprehensive Plan. They also held a first public hearing for changes to the Land Development Code. A second public hearing for changes to the Land Development Code is scheduled.
+The Board of County Commissioners approved a [Mobility Fee Ordinance](http://www.hillsboroughcounty.org/index.aspx?NID=1593), changes to the Impact Fee Ordinance, and amendments to the Comprehensive Plan. They also held a first public hearing for changes to the Land Development Code. A second public hearing for changes to the Land Development Code will be scheduled.
 
 * [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/693/16-0426_Public%20Hearing%20Agenda.pdf)
 
