--- a/_posts/2016-05-11-0.md
+++ b/_posts/2016-05-11-0.md
@@ -7,7 +7,7 @@ badge_color: default
 
 The Board of County Commissioners discussed possible funding strategies for the Community Transportation Plan.
 
-The Board of County Commissioners approved setting a [public hearing on June 9](http://www.hillsboroughcounty.org/Calendar.aspx?EID=15800) for a 15-Year ½% Transportation System Sales Surtax Ordinance.
+The Board of County Commissioners approved scheduling a [public hearing on June 9](http://www.hillsboroughcounty.org/Calendar.aspx?EID=15800) for a 15-Year ½% Transportation System Sales Surtax Ordinance.
 
 * [Agenda, background information, and presentations](http://agenda.hillsboroughcounty.org/cache/00003/698/Agenda%20for%2005-11-16%20Workshop.pdf)
 * [Watch video](http://65.49.32.144/Hillsborough/0376a56e-0f12-495c-9dba-db84003ce12b/BOCC_Workshop_5_11_2016/presentation_file/mgpresenter.html?Stream=low)
