--- a/_posts/2016-06-16-0.md
+++ b/_posts/2016-06-16-0.md
@@ -1,7 +1,10 @@
 ---
 layout: post
-badge_icon: calendar
-badge_color: default
+badge_icon: cogs
+badge_color: info
 ---
 
-[Public Hearing](http://hillsboroughcounty.org/Calendar.aspx?EID=15811) for final adoption of amendments to the Comprehensive Plan and Land Development Code related to the approved Mobility Fees Ordinance.
+The Board of County Commissioners approved amendments to the Comprehensive Plan and Land Development Code related to the approved Mobility Fees Ordinance.
+
+* [Agenda and background material](http://agenda.hillsboroughcounty.org/cache/00003/710/LDC16-05952nd%20PH.pdf)
+* [Watch](http://65.49.32.144/Hillsborough/4b2e52b1-a37d-4d71-bb60-94e6d2456483/BOCC%20PH%206%2016%202016/Presentation_file/video1.asx)
